--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,1 +1,7 @@
-$browngold : #A14617;
+$browngold: #a14617;
+
+$babyblue: #68ccfd;
+
+$bodyfont: "Kosugi", sans-serif;
+
+$headingfont: "Kosugi", sans-serif;
