--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -2,5 +2,14 @@
 
 @import '../scss/variables';
 
+@import '../scss/body';
+
 @import '../scss/header';
 
+@import '../scss/index';
+
+@import '../scss/products';
+
+@import '../scss/contact';
+
+@import '../scss/footer';
