got homepage slider to work. adding seperate sliders

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -24,6 +24,9 @@
   height: 100px;
   width: 100px;
   flex-grow: 2;
+  // &:hover {
+  //   transform: scale(3);
+  // }
 } //GOAT ICON FOR NAV BAR
 
 .header__extralinks {
