--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -1,15 +1,15 @@
-@import '../scss/reset';
+@import "../scss/reset";
 
-@import '../scss/variables';
+@import "../scss/variables";
 
-@import '../scss/body';
+@import "../scss/body";
 
-@import '../scss/header';
+@import "../scss/header";
 
-@import '../scss/index';
+@import "../scss/index";
 
-@import '../scss/products';
+@import "../scss/products";
 
-@import '../scss/contact';
+@import "../scss/contact";
 
-@import '../scss/footer';
+@import "../scss/footer";
