--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -5,18 +5,22 @@
 }
 
 .imgShuffle {
-  position: relative;
-  background-image: url("../img//hero/hero1.jpg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   width: 100vw;
   height: 70vh;
   .imgCaption {
-    position: absolute;
-    font-size: 5em;
+    font-family: $headingfont;
+    font-weight: bold;
+    letter-spacing: 10px;
+    color: #fff;
+    font-size: 7em;
     display: block;
-    top: 35vh;
-    left: 500px;
     text-transform: uppercase;
+    text-shadow: #fff 1px 1px 5px;
   }
 }
