--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,6 +2,8 @@ $browngold: #a14617;
 
 $babyblue: #68ccfd;
 
+$babybluelight: #8b9ca4;
+
 $bodyfont: "Kosugi", sans-serif;
 
 $headingfont: "Kosugi", sans-serif;
