--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -133,6 +133,13 @@ table {
   border-spacing: 0;
 }
 
+h1 {
+  font-family: "Kosugi", sans-serif;
+  font-size: 3em;
+  font-weight: bold;
+  margin-left: 16px;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -143,7 +150,7 @@ table {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px 0;
+  padding: 20px 1%;
 }
 
 .header__name {
@@ -197,11 +204,15 @@ table {
 }
 
 .index {
-  height: 100vh;
-  font: "Kosugi", sans-serif;
+  font-family: "Kosugi", sans-serif;
 }
 
-.imgShuffle {
+.home__body {
+  font-family: "Kosugi", sans-serif;
+}
+
+.duragShuffle {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -211,14 +222,18 @@ table {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   width: 100vw;
-  height: 70vh;
+  height: 80vh;
 }
 
-.imgShuffle .imgCaption {
+.imgCaption {
   font-family: "Kosugi", sans-serif;
   font-weight: bold;
   letter-spacing: 10px;
@@ -227,6 +242,225 @@ table {
   display: block;
   text-transform: uppercase;
   text-shadow: #fff 1px 1px 5px;
+}
+
+.durag__hero_btn {
+  font-size: 5em;
+  position: absolute;
+  bottom: 2em;
+  text-transform: uppercase;
+  background-color: #68ccfd;
+  border: none;
+  color: white;
+  text-decoration: none;
+  font-family: "Kosugi", sans-serif;
+}
+
+.homebody__hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.homebody__hero .shorts__background,
+.homebody__hero .durag__background {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 50vw;
+  height: 80vh;
+}
+
+.homebody__hero .shorts__background {
+  background-image: url("../img/shortshero/shorthero1.jpg");
+}
+
+.homebody__hero .durag__background {
+  background-image: url("../img/hero/hero33.png");
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  margin-top: 10vh;
+}
+
+.homebody__hero .hero__captions {
+  width: 50%;
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  justify-items: center;
+  text-align: center;
+}
+
+.homebody__hero .hero__captions .hero__caption__header {
+  font-size: 5em;
+  display: block;
+  text-transform: uppercase;
+}
+
+.shop__link {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 1em;
+  padding: 0.5em;
+  width: 20vw;
+  background-color: #68ccfd;
+  font-size: 3em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+}
+
+.shop__link:hover {
+  background-color: #a14617;
+}
+
+.products {
+  margin-left: 1em;
+  font-family: "Kosugi", sans-serif;
+}
+
+.products__header {
+  font-weight: bold;
+}
+
+.product__cards {
+  letter-spacing: 1.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product__cards .product__card {
+  text-align: center;
+  text-transform: uppercase;
+  min-width: 30%;
+  margin: 3% 0;
+}
+
+.product__card__title {
+  font-size: 2.5em;
+  font-family: "Kosugi", sans-serif;
+}
+
+.product__img {
+  width: 100%;
+  height: 100%;
+}
+
+.product__img:hover {
+  -webkit-animation: moveUp 3s ease;
+          animation: moveUp 3s ease;
+}
+
+.product__card_price,
+.product__card_quanity {
+  font-size: 1.75em;
+}
+
+.product__controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 0.5em;
+}
+
+.product__card_cart-btn,
+.product__card-addToCart-btn {
+  font-size: 2em;
+  padding: 5px 10px;
+  margin-top: 15px;
+  width: 50%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.product__card-addToCart-btn {
+  color: #fff;
+  background-color: #000;
+  border-radius: 20px;
+}
+
+.product__card-addToCart-btn:hover, .product__card-addToCart-btn:focus {
+  color: #000;
+  background-color: #fff;
+}
+
+button {
+  margin: 0 7px;
+  font-size: 1.5em;
+  outline: none;
+  background-color: #fff;
+  color: #000;
+  text-transform: uppercase;
+  border: none;
+  border-bottom: 1px solid black;
+}
+
+button:hover, button:active {
+  background-color: #000;
+  color: #fff;
+  border-radius: 20px;
+}
+
+@-webkit-keyframes moveUp {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    opacity: 0.5;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes moveUp {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    opacity: 0.5;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .contact {
@@ -285,6 +519,7 @@ table {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-right: 2%;
 }
 
 .contact__form label {
@@ -399,7 +634,7 @@ table {
 
 .footer__payment_options {
   position: absolute;
-  right: 0;
+  right: 2%;
 }
 
 .footer__payment_options a {
