--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,3 +7,7 @@ $babybluelight: #8b9ca4;
 $bodyfont: "Kosugi", sans-serif;
 
 $headingfont: "Kosugi", sans-serif;
+
+$ipadmedia: 1085px;
+
+$iphonemedia: 650px;
