--- a/src/assets/scss/_body.scss
+++ b/src/assets/scss/_body.scss
@@ -3,4 +3,8 @@ h1 {
   font-size: 3em;
   font-weight: bold;
   margin-left: 16px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #000;
+  text-transform: uppercase;
+  display: inline-block;
 }
