--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -10,6 +10,9 @@
   }
   display: flex;
   align-items: center;
+  @media (max-width: $ipadmedia) {
+    display: block;
+  }
 }
 .contact__left_col {
   flex-grow: 1;
@@ -20,6 +23,10 @@
     font-weight: bold;
     position: absolute;
     top: 0;
+    @media (max-width: $ipadmedia) {
+      position: relative;
+      margin-bottom: 1em;
+    }
   }
   .contact__sec_header {
     font-size: 2em;
@@ -39,6 +46,9 @@
   label {
     font-size: 1.25em;
     margin-bottom: 10px;
+    @media (max-width: $ipadmedia) {
+      margin-left: 16px;
+    }
   }
   input,
   textarea {
@@ -47,6 +57,11 @@
     border: none;
     border-bottom: 2px solid #eee;
     font-size: 2em;
+    @media (max-width: $ipadmedia) {
+      width: 80%;
+      margin: 0 auto;
+      text-align: center;
+    }
   }
   #submitButton {
     margin: 15px 0;
