--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -53,6 +53,10 @@
   width: 100%;
   justify-content: center;
   align-items: center;
+  @media (max-width: $ipadmedia) {
+    display: inline;
+    margin-bottom: 7%;
+  }
 }
 .footer__payment_options {
   position: absolute;
@@ -63,5 +67,7 @@
       font-size: 2.5em;
       color: white;
     }
+  }
+  @media (max-width: $ipadmedia) {
   }
 }
