--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -15,12 +15,15 @@
       color: $babyblue;
     }
   }
+  @media (max-width: $iphonemedia) {
+    height: 400px;
+  }
 }
 
 .footer__top_middle {
   display: flex;
-  //   width: 50%;
   justify-content: space-between;
+
   p,
   a {
     padding: 0 15px;
@@ -29,6 +32,17 @@
   p {
     &:nth-last-of-type(odd) {
       border-right: 1px solid #eee;
+      @media (max-width: $ipadmedia) {
+        border: none;
+      }
+    }
+  }
+  @media (max-width: $iphonemedia) {
+    flex-direction: column;
+    p,
+    a {
+      padding-bottom: 6%;
+      border: none;
     }
   }
 }
@@ -41,6 +55,10 @@
     i {
       font-size: 2em;
     }
+  }
+  @media (max-width: $iphonemedia) {
+    margin: 5% 0;
+    display: flex;
   }
 }
 
@@ -57,6 +75,10 @@
     display: inline;
     margin-bottom: 7%;
   }
+  @media (max-width: $iphonemedia) {
+    display: inline;
+    margin-bottom: 7%;
+  }
 }
 .footer__payment_options {
   position: absolute;
@@ -68,6 +90,14 @@
       color: white;
     }
   }
-  @media (max-width: $ipadmedia) {
+  @media (max-width: $iphonemedia) {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    a,
+    i {
+      padding: 0 3px;
+    }
   }
 }
