--- a/src/assets/scss/_index.scss
+++ b/src/assets/scss/_index.scss
@@ -13,6 +13,9 @@
   background-attachment: fixed;
   width: 100vw;
   height: 80vh;
+  @media (max-width: $iphonemedia) {
+    height: 50vh;
+  }
 }
 .imgCaption {
   font-family: $headingfont;
@@ -24,8 +27,11 @@
   display: block;
   text-transform: uppercase;
   text-shadow: #fff 1px 1px 5px;
-  //   padding-bottom: 10%;
+
   border: none !important;
+  @media (max-width: $iphonemedia) {
+    font-size: 4em;
+  }
 }
 .durag__hero_btn {
   font-size: 5em;
@@ -37,7 +43,6 @@
   color: white;
   text-decoration: none;
   font-family: $headingfont;
-  //   align-self: baseline;
 }
 
 .homebody__hero {
@@ -49,6 +54,11 @@
     background-repeat: no-repeat;
     width: 50vw;
     height: 80vh;
+    @media (max-width: $iphonemedia) {
+      width: 100%;
+      height: 50vh;
+      align-content: center;
+    }
   }
   .shorts__background {
     background-image: url("../img/shortshero/shorthero1.jpg");
@@ -58,6 +68,9 @@
     background-image: url("../img/hero/hero33.png");
 
     margin-top: 10vh;
+    @media (max-width: $iphonemedia) {
+      margin: 0;
+    }
   }
   .hero__captions {
     width: 50%;
@@ -71,7 +84,19 @@
       font-size: 5em;
       display: block;
       text-transform: uppercase;
+      @media (max-width: $iphonemedia) {
+        font-size: 2em;
+        text-align: center;
+        margin: auto;
+        display: block;
+      }
     }
+    @media (max-width: $iphonemedia) {
+      margin: 10px auto;
+    }
+  }
+  @media (max-width: $iphonemedia) {
+    display: block;
   }
 }
 .shop__link {
@@ -87,5 +112,9 @@
   color: white;
   &:hover {
     background-color: $browngold;
+  }
+  @media (max-width: $iphonemedia) {
+    font-size: 1.5em;
+    width: 100%;
   }
 }
