--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -137,7 +137,7 @@ h1 {
   font-family: "Kosugi", sans-serif;
   font-size: 3em;
   font-weight: bold;
-  margin-left: 16px;
+  margin-left: 3px;
   padding-bottom: 5px;
   border-bottom: 1px solid #000;
   text-transform: uppercase;
@@ -154,7 +154,22 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px 1%;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 10px 0;
+  position: fixed;
+  width: 100%;
+  height: 13vh;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  background-color: white;
+}
+
+@media (max-width: 650px) {
+  .header {
+    height: 10vh;
+  }
 }
 
 .header__name {
@@ -191,6 +206,7 @@ h1 {
 @media (max-width: 650px) {
   .header__icon {
     background-size: 50%;
+    margin-top: 50%;
   }
 }
 
@@ -222,10 +238,22 @@ h1 {
   color: #a14617;
 }
 
+@media (max-width: 375px) {
+  .header__extralinks {
+    font-size: 1em;
+    justify-self: flex-end;
+  }
+  .header__extralinks a,
+  .header__extralinks li {
+    margin-left: auto;
+    padding-bottom: 1em;
+  }
+}
+
 @media (max-width: 650px) {
   .header__extralinks {
     font-size: 1em;
-    display: block;
+    display: inline-block;
   }
   .header__extralinks a,
   .header__extralinks li {
@@ -243,6 +271,7 @@ h1 {
 
 .index {
   font-family: "Kosugi", sans-serif;
+  margin-top: 13vh;
 }
 
 .duragShuffle {
@@ -414,6 +443,7 @@ h1 {
 }
 
 .products {
+  margin-top: 16vh;
   margin-left: 1em;
   font-family: "Kosugi", sans-serif;
 }
@@ -660,6 +690,7 @@ button:hover, button:active {
 }
 
 .contact {
+  margin-top: 16vh;
   position: relative;
   font-family: "Kosugi", sans-serif;
   display: -webkit-box;
@@ -710,9 +741,21 @@ button:hover, button:active {
   font-size: 2em;
 }
 
+@media (max-width: 650px) {
+  .contact__left_col .contact__sec_header {
+    margin-bottom: 1em;
+  }
+}
+
 .contact__left_col p {
   margin: 2.5% 0;
   font-size: 1.25em;
+}
+
+@media (max-width: 650px) {
+  .contact__left_col p {
+    margin-bottom: 1em;
+  }
 }
 
 .contact__form {
@@ -779,6 +822,8 @@ button:hover, button:active {
 }
 
 .footer {
+  position: absolute;
+  bottom: 0;
   height: 250px;
   background-color: black;
   color: #fff;
@@ -833,6 +878,7 @@ button:hover, button:active {
 
 @media (max-width: 1085px) {
   .footer__top_middle p:nth-last-of-type(odd) {
+    font-size: 0.75em;
     border: none;
   }
 }
