--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -2,7 +2,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 1%;
+  align-content: center;
+  padding: 10px 0;
+  position: fixed;
+  width: 100%;
+  height: 13vh;
+  top: 0;
+  right: 0;
+  z-index: 3;
+  background-color: white;
+  @media (max-width: $iphonemedia) {
+    height: 10vh;
+    // padding: 10% 0;
+  }
 }
 
 .header__name {
@@ -28,6 +40,7 @@
   flex-grow: 2;
   @media (max-width: $iphonemedia) {
     background-size: 50%;
+    margin-top: 50%;
   }
 } //GOAT ICON FOR NAV BAR
 
@@ -49,9 +62,18 @@
       color: $browngold;
     }
   }
+  @media (max-width: $smallphonemedia) {
+    font-size: 1em;
+    justify-self: flex-end;
+    a,
+    li {
+      margin-left: auto;
+      padding-bottom: 1em;
+    }
+  }
   @media (max-width: $iphonemedia) {
     font-size: 1em;
-    display: block;
+    display: inline-block;
     a,
     li {
       padding-bottom: 1em;
@@ -59,7 +81,7 @@
   }
 }
 
-.active {
+.activeLink {
   color: $browngold;
   &:hover {
     color: $babyblue;
