--- a/src/assets/scss/_products.scss
+++ b/src/assets/scss/_products.scss
@@ -138,6 +138,11 @@ button {
   left: -10px;
   animation: saleIconDance 3s infinite;
 }
+.errorHandler{
+  font-size: 5em;
+  text-align: center;
+
+}
 
 @keyframes saleIconDance {
   0% {
