--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -50,6 +50,7 @@
    background-repeat: no-repeat;
    width: 50px;
    height: 50px;
+   display: block;
    @media (max-width: $iphonemedia) {
     width: 25px;
     height: 25px;
